# seqgrep

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  example.fa  pyproject.toml
docs/: architecture.md
examples/: backend.rs
src/: alphabet.rs  cli.rs  codec.rs  error.rs  fastx.rs  lib.rs  main.rs  packed.rs
src/search/: mod.rs
src/seqgrep/: __init__.py  alphabets.py  chunked.py  cli.py  codecs.py  exact.py  fasta.py  fastx.py  iupac.py  main.py  models.py  planner.py  protein.py  window.py
tests/: cli.rs  fastx.rs  reference_parity.rs  search_semantics.rs  test_chr21.sh  test_seqgrep.py
