[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "seqgrep"
version = "0.1.0"
description = "Search biological sequences with literal or IUPAC-aware matching, reverse-complement, circular DNA, FASTA/FASTQ, gzip, and chunked multiprocessing support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Tien Du" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10"
]

[project.scripts]
seqgrep = "seqgrep.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seqgrep"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
